# streaming-feature-store

./: .gitignore  Makefile  daily_progress.md  pyproject.toml
docker/: docker-compose.yml
docker/postgres/: init.sql
docs/: gap_project_plan.md  ml_infra_role_ranking.md  ml_infra_role_targets.md
docs/changelog/: 2026-04-20_schema_registry.md
docs/design/: gap_project_plan.md  week1_01_docker_compose_infra.md  week1_02_avro_schemas_and_producer_serialization.md  week1_03_schema_evolution_experiments.md  week1_04_synthetic_event_producer.md  week1_05_consumer_group_end_to_end_latency.md  week1_06_postgres_sink_and_continuous_feeder.md  week1_kafka_postgres_docker_setup.md  week2_01_validation_layer_and_dlq.md  week2_02_sliding_window_features.md  week2_02_sliding_window_features_plain_consumer.md  week2_03_exactly_once_transactions.md  week3_01_feature_serving_api.md
docs/notes/: python_condition_variables.md  python_gil_vs_other_languages.md
docs/results/: week1_consume_results_1member.md  week1_consume_results_mp.md  week1_gil_kafka_throughput_blogpost.md  week1_gil_kafka_throughput_blogpost_hashnode.md  week1_load_profile_analysis.md  week1_load_test_results.md  week1_load_test_results_mp.md  week1_load_test_results_mp_eos.md  week1_load_test_throughput_investigation.md  week1_postgres_sink_results.md  week1_schema_evolution_results.md  week2_eos_results.md  week2_flink_pivot_dependency_blogpost_hashnode.md  week2_sliding_features_results.md
schemas/dlq/v1/: dead_letter_record.avsc
schemas/ecommerce/v1/: click_payload.avsc  ecommerce_event.avsc  page_view_payload.avsc  purchase_payload.avsc
schemas/ecommerce/v1.1/: ecommerce_event.avsc
schemas/ecommerce/v1.2/: page_view_payload.avsc
schemas/ecommerce/v1.3/: ecommerce_event.avsc  purchase_payload.avsc
schemas/sliding/v1/: sliding_feature_record.avsc
scripts/: register_schemas.py  run_background_feeder.py  run_event_consume_mp.py  run_event_load.py  run_event_load_mp.py  run_feature_api.py  run_postgres_sink.py  run_schema_evolution.py  run_sliding_features_consumer.py  run_validator.py  run_validator_mp.py
src/streaming_feature_store/: __init__.py  config.py
src/streaming_feature_store/admin/: __init__.py  topic_admin.py
src/streaming_feature_store/consume/: __init__.py  accountant.py  consume_runner.py  report.py
src/streaming_feature_store/consume_mp/: __init__.py  aggregator.py  mp_runner.py  process_planner.py  report.py  worker_entry.py
src/streaming_feature_store/consumer/: __init__.py  avro_consumer.py
src/streaming_feature_store/eos/: __init__.py  commit_strategy.py  route_adapters.py  transactional_id.py  transactional_producer.py
src/streaming_feature_store/feeder/: __init__.py  feeder_runner.py
src/streaming_feature_store/load/: __init__.py  accountant.py  load_runner.py  pacer.py  report.py  synthetic.py
src/streaming_feature_store/load_mp/: __init__.py  aggregator.py  mp_runner.py  process_planner.py  report.py  worker_entry.py
tests/: conftest.py
tests/integration/: test_avro_producer_end_to_end.py  test_consume_mp_end_to_end.py  test_consume_runner_end_to_end.py  test_docker_infrastructure.py  test_eos_end_to_end.py  test_feeder_runner_end_to_end.py  test_feeder_to_sink_pipeline.py  test_load_runner_end_to_end.py  test_mp_runner_end_to_end.py  test_postgres_writer_end_to_end.py  test_schema_evolution_end_to_end.py  test_schema_registration.py  test_serving_api_end_to_end.py  test_sink_runner_end_to_end.py  test_sliding_features_end_to_end.py  test_topic_admin_end_to_end.py  test_validator_end_to_end.py
tests/unit/: conftest.py  test_avro_consumer_consume_surface.py  test_avro_consumer_unit.py  test_avro_producer_unit.py  test_config.py  test_consume_accountant.py  test_consume_mp_aggregator.py  test_consume_mp_runner_unit.py  test_consume_process_planner.py  test_consume_report.py  test_consume_runner_unit.py  test_consume_worker_entry.py  test_delivery_accountant.py  test_dlq_producer_unit.py  test_dlq_record.py  test_eos_commit_strategy.py  test_eos_integration_points.py  test_eos_route_adapters.py  test_eos_transactional_id.py  test_eos_transactional_producer.py  test_evolution_driver.py  test_feeder_runner_unit.py  test_init_sql.py  test_load_report.py  test_load_runner_unit.py  test_mp_aggregator.py  test_mp_report.py  test_mp_runner_unit.py  test_mp_worker_entry.py  test_postgres_writer.py  test_process_planner.py  test_register_schemas_cli.py  test_run_event_consume_mp_cli.py  test_run_event_load_mp_cli.py  test_run_feature_api_cli.py  test_run_sliding_features_consumer_cli.py  test_run_validator_cli.py  test_run_validator_mp_cli.py  test_schema_evolution.py  test_schema_loader.py  (+27 more)
(+37 files in other folders)
