[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-feature-store"
version = "0.1.0"
description = "Real-time feature store and streaming pipeline — Phase 1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "polars>=1.0",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka[avro,schemaregistry]>=2.4",
    "fastavro>=1.9",
]
postgres = [
    "psycopg[binary]>=3.1",
]
test = [
    "confluent-kafka[avro,schemaregistry]>=2.4",
    "fastavro>=1.9",
    "psycopg[binary]>=3.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests>=2.31",
    "sqlparse>=0.5",
]
dev = [
    "streaming-feature-store[test]",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/streaming_feature_store"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "integration: marks tests as integration tests (require running Docker services)",
    "benchmark: marks the headline 10s / 50K throughput-floor benchmark",
]

[tool.coverage.run]
source = ["src/streaming_feature_store"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
