[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-feature-store"
version = "0.1.0"
description = "Real-time feature store and streaming pipeline — Phase 1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "polars>=1.0",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka[avro,schemaregistry]>=2.4",
    "fastavro>=1.9",
]
postgres = [
    "psycopg[binary]>=3.1",
]
# Sliding-window features consumer (Week 2 PR #2).  Plain Python Kafka
# consumer + in-memory windowing — Flink/PyFlink was prototyped and rejected;
# see docs/design/week2_02_sliding_window_features_plain_consumer.md §2.1.
sliding = [
    "confluent-kafka[avro,schemaregistry]>=2.4",
    "fastavro>=1.9",
    "redis>=5.0",
    "pyarrow>=16",
]
# Online feature-serving API (Week 3 PR #1).  Read-only FastAPI service over
# the Redis online store; see docs/design/week3_01_feature_serving_api.md.
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
]
test = [
    "confluent-kafka[avro,schemaregistry]>=2.4",
    "fastavro>=1.9",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests>=2.31",
    "sqlparse>=0.5",
]
dev = [
    "streaming-feature-store[test]",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/streaming_feature_store"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "integration: marks tests as integration tests (require running Docker services)",
    "benchmark: marks the headline 10s / 50K throughput-floor benchmark",
]

[tool.coverage.run]
source = ["src/streaming_feature_store"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[dependency-groups]
dev = [
    "py-spy>=0.4.2",
]
